[package]
name = "cr2_to_tiff_halpha"
version = "0.1.0"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2018"

[lib]
name = "cr2_to_tiff_halpha"
doctest = false

[[bin]]
name = "cr2totiff"
path = "bin/cr2totiff.rs"


[[bin]]
name = "mkmean"
path = "bin/mkmean.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libraw-rs = "0.0.4"
image = "0.23.14"
clap = "2.33.3"